--- a/admin-app/src/containers/category.css
+++ b/admin-app/src/containers/category.css
@@ -1,4 +1,15 @@
-
+.category-container > .buttons  button{
+  background-color: black;
+  text-align: center;
+  text-transform: capitalize;
+  color: white;
+  padding: .8vmin 1vmin;
+  outline: 0;
+  border: 0;
+  margin: .3rem;
+  /* width: 9%; */
+  cursor: pointer;
+}
 .close{
   color: white;
   cursor: pointer;
@@ -38,54 +49,60 @@ color: black;
     box-shadow: 0 0 2px 1px rgb(4, 17, 12);
     
   }
-  .page-container .main-container .modal-form{
+  .page-container .modal-form{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     padding: .5rem .3rem;
-    /* overflow-y: auto; */
+    overflow-y: auto;
     animation: slide- .3s ease;
     z-index: 99999999;
     background-color: rgb(201 213 217);
     
   }
-  .page-container .main-container .modal-form > span{
+
+  .page-container  .modal-form > span{
     float: right;
     cursor: pointer;
     
     color: blanchedalmond;
   }
-  .page-container .main-container .modal-form span:hover{
+  .page-container  .modal-form span:hover{
     /* color: red; */
   }
-  .page-container .main-container .modal-form form{
-    position: absolute;
+  .page-container .modal-form form{
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%); */
     display: flex;
     flex-direction: column;
     /* background-color: rgb(26, 189, 113); */
     background-color: var(--form-bg);
-    width: 70vmin;
+    /* width: 70vmin; */
     height: auto;
-    /* min-width: 40vmin;
-    max-width: 60vmin;
-    max-height: 100vmin;
-    min-height: 50vmin; */
+    width: auto;
+    min-width: 90vmin;
+    max-width: 70vmin;
+    /* max-height: 100vmin;
+    min-height: 60vmin; */
     margin: auto auto;
     padding: .3rem .6rem;
-    box-shadow: 0 0 100px 12px rgba(0,0,0,0.6);
+    box-shadow: 0 0 30px 3px rgba(0,0,0,0.9);
   }
-.page-container .main-container .modal-form form .form-header{
+.page-container .modal-form form .form-header{
   color: white;
   padding: .3rem;
   display: flex;
   justify-content: space-between;
 }
-.page-container .main-container form .form-input{
+.page-container .modal-form-update  form  .form-group{
+  margin-left: 15px;
+}
+.page-container form .form-input,
+.page-container form .form-group .form-input{
   margin: .2rem .4rem;
   /* width: 50%; */
   border-radius: .2rem;
@@ -93,13 +110,16 @@ color: black;
   border: 0;
   padding: .7vmin .10vmin;
 }
-.page-container .main-container .modal-form form .buttons {
+.page-container .modal-form form .buttons,
+
+.page-container form .form-group .buttons {
   width: 100%;
   display: flex;
   justify-content: space-around;
   margin: .2rem 0;
 }
-.page-container .main-container .modal-form form .buttons .form-btn{
+.page-container .modal-form form .buttons .form-btn,
+.page-container form .form-group .buttons .form-btn{
   background-color: black;
   text-align: center;
   text-transform: capitalize;
@@ -110,6 +130,9 @@ color: black;
   width: 49%;
   cursor: pointer;
 }
-.page-container .main-container .modal-form form .buttons .form-btn:first-child{
+.page-container .modal-form form .buttons .form-btn:first-child{
   background-color: rgb(233, 40, 6);
+}
+.page-container > form >.form-group {
+  display: flex;
 }
