--- a/admin-app/src/containers/form.css
+++ b/admin-app/src/containers/form.css
@@ -9,15 +9,19 @@
     /* flex-direction: row; */
     align-items: center;
     border-radius: 4px;
-    animation: slide- .3s linear;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    animation: slide-form .3s linear;
 
   }
-  @keyframes slide- {
+  @keyframes slide-form {
     from{
-      transform: scale(.2) translatey(-300px) ;
+      transform: scale(1) translate(-50%,-100%) ;
     }
     to{
-      transform: scale(1) translate(0);
+      transform: scale(1) translate(-50%,-50%);
     }
   }
   .form-container .header {
