--- a/admin-app/src/containers/ui/modal/style.css
+++ b/admin-app/src/containers/ui/modal/style.css
@@ -13,42 +13,36 @@
     overflow-y: auto;
     animation: slide- .3s ease;
     z-index: 99999999;
-    /* background-color: rgb(201 213 217); */
+    /* background-color: rgba(115, 129, 133, 0.414); */
     
   }
+ @keyframes slide- {
+   from{
+    transform: translateY(-300px);
+   }to{
+    transform: translate(0);
+   }
+   
+ }
 
-  /* .modal-form  span.close{
-    float: right;
-    cursor: pointer;
-    
-    color: rgb(105, 103, 99);
-    text-shadow: 0 0 4px black;
-  } */
   .modal-form span:hover{
     /* color: red; */
   }
 .modal-form form{
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%); */
     display: flex;
     flex-direction: column;
-    /* background-color: rgb(26, 189, 113); */
     background-color: var(--form-bg);
-    /* width: 70vmin; */
+
     height: auto;
     width: auto;
-    /* flex-wrap: wrap; */
     min-width: 60vmin;
     max-width: 120vmin;
     margin: auto;
-    /* max-height: 100vmin;
-    min-height: 60vmin; */
+
     margin: auto auto;
     padding: .3rem .6rem;
     border-radius: .3rem;
-    box-shadow: 0 10px 30px 3px rgba(0, 0, 0, 0.342);
+    box-shadow: 0 10px 50px 20px rgba(0, 0, 0, 0.579);
   }
 .modal-form form .form-header{
   color: white;
