--- a/main-app/src/components/headers/nav-header/modal.css
+++ b/main-app/src/components/headers/nav-header/modal.css
@@ -1,87 +1,221 @@
-:root{
-    --form-width: 500;
+label {
+  color: white;
 }
-*{
-    transition: all .2s ease ;
+
+:root {
+  --modal-width: 80;
 }
-.modal{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    /* background-color: var(--light); */
-    /* opacity: .4; */
-    background-color: rgba(0, 0, 0, 0.862);
-    z-index: 99999;
-    animation: scale_ .2s linear;
-    padding: 40px;
-    overflow-y: scroll;
-}
-.modal .modal-header{
-    display: flex;
-    justify-content: space-between;
-    padding: 1.2rem;
-    color: white;
-    background-color: var(--success);
-    width: calc(var(--form-width) * 1px);
-    margin: 0 auto;
-}
-.modal .modal-header .close{
-    float: right;
-    cursor: pointer;
-}
-.modal form{
-    width: calc(var(--form-width) * 1px);
-    margin: auto auto;
-    background-color: var(--bg-green);
-    /* display: grid; */
+
+.modal {
+  position: fixed;
+  top: 5%;
+  left: 50%;
+  /* transform: translate(-50%,-50%); */
+  /* width: 100px; */
+  /* min-width: 400px; */
+  /* height: 60vmin; */
+  margin: auto;
+  /* padding: .5rem .3rem; */
+  overflow-y: auto;
+  animation: slide- .3s ease;
+  /* margin: auto; */
+  z-index: 99999999;
+  transform: translate(-50%, 0);
+  display: flex;
+  flex-direction: column;
+  /* align-items: flex-start; */
+  justify-content: space-between;
+  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.642);
+  /* justify-content: center; */
+  background-color: rgb(5, 70, 66);
+  border-radius: .2rem;
 
 }
-.modal form .form-group{
-display: flex;
-justify-content: space-around;
-padding: .3rem .6rem;
+
+@keyframes slide- {
+  from {
+    transform: translate(-50%, -100%) scale(.8);
+  }
+
+  to {
+    transform: translate(-50%, 0%) scale(1);
+  }
+
 }
-.modal form .form-group label{
-    color: white;
-    width: 30%;
+
+.modal .modal-header {
+
+
+  /* max-width: calc(var(--modal-width) * 1vmin); */
+  /* width: 100%; */
+  /* margin: auto; */
+  color: white;
+  color: rgb(23, 76, 85);
+  padding: .3rem;
+  display: flex;
+  justify-content: space-between;
+
+  background-color: rgb(231, 241, 243);
+  align-items: center;
+  /* border-radius: .2rem; */
+
 }
-.modal form .buttons{
-display: flex;
-justify-content: flex-end ;
+
+.modal .modal-body {
+  padding: 1.3rem 1.6rem;
+  display: flex;
+  /* border-radius: .4rem; */
+  /* overflow-y: auto; */
+  animation: fade .3s ease;
+  place-self: center;
+  /* box-shadow: 0 0 20px 5px rgb(53, 41, 41); */
 }
-.modal form .buttons .form-btn{
-    color: white;
-    padding: 6px 8px;
-    margin: .3rem;
-    border: 0;
-    outline: 0;
-    /* background-color: orange; */
+
+@keyframes fade {
+  from {
+    opacity: 0;
+    ;
+  }
+
+  to {
+
+    opacity: 1;
+  }
 }
-.modal form .buttons .form-btn:first-child{
-    background-color:var(--warning);
+
+.modal .modal-body .info .content {
+  /* width: 40%; */
+  /* box-shadow: inset 0 0 10px 2px white; */
+  border-radius: 10px;
+  padding: .3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
-.modal form .buttons .form-btn:last-child{
-    background-color: var(--success);
+
+.modal .modal-body .info p {
+  cursor: pointer;
 }
-/* .modal form .buttons:after{
-    content: '';
-    clear: both;
-    display: table;
-} */
-.modal form .form-group .input-control{
-    padding: 8px 10px;
-    border: 0;
-    outline: 0;
-    width: 70%;
-    place-items: center;
-    place-self: center;
+
+.modal,
+.modal-body h4 {
+  color: white;
 }
-@keyframes scale_ {
-        from{
-            transform: scale(0);
-        }to{
-            transform: scale(1);
-        }
+
+.modal form {
+  /* width: 60%; */
+  display: flex;
+  flex-direction: column;
+  /* margin: auto; */
+
+  /* margin: auto auto; */
+  padding: .3rem .6rem;
+  border-radius: .3rem;
+  /* box-shadow: 0 10px 50px 20px rgba(0, 0, 0, 0.579); */
+}
+
+.form-group {
+  animation: fade .5s ease;
+
+}
+form > .form-group > div > button {
+  padding: 6px;
+  margin:  4px 0;
+  width: 100%;
+  text-transform: capitalize;
+  border-radius: .3rem;
+  background-color: rgb(211, 209, 209);
+}
+.close {
+  color: rgb(7, 0, 0);
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.close:hover {
+  transform: scale(1.2);
+}
+
+.close:active {
+  transform: translatey(4px) scale(.8);
+
+}
+
+form .form-group .input-control {
+  /* margin: .1rem .4rem; */
+  border-radius: .2rem;
+  outline: 0;
+  border: 0;
+  padding: .4rem .6rem;
+}
+
+form .form-group .input-control:focus {
+  box-shadow: inset 0 -1px 2px 1px black;
+}
+
+.modal form .buttons {
+  width: 100%;
+  display: flex;
+  padding: .3rem;
+  justify-content: space-around;
+  margin: auto 0;
+}
+
+.modal form .buttons .form-btn {
+  background-color: black;
+  text-align: center;
+  text-transform: capitalize;
+  color: white;
+  padding: 1.8vmin 1vmin;
+  outline: 0;
+  border: 0;
+  width: 49%;
+  cursor: pointer;
+}
+
+.modal form .buttons .form-btn:first-child {
+  background-color: rgb(233, 40, 6);
+}
+
+form>.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.fade-out {
+  animation: fade-out .6s linear;
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+
+}
+
+.modal.error *:not(h1, h2, h3, h4, h5) {
+  color: rgb(166, 14, 14);
+  /* background-color: rgb(233, 225, 225) ; */
+}
+
+.modal.error {
+  background-color: rgb(248, 245, 244);
+}
+
+.modal.error .modal-header,
+.modal.error .modal-body {
+  width: calc(var(--modal-width) * 1vmin);
+}
+
+.modal.error h4 {
+  color: rgb(145, 3, 3)
+}
+
+p>span {
+  color: #f68754;
+  text-decoration: underline;
 }
