--- a/main-app/src/components/headers/style.css
+++ b/main-app/src/components/headers/style.css
@@ -1,31 +1,61 @@
-.header{
+.main-header{
     text-transform: capitalize;
     width: 100%;
     background-color: var(--light);
-    display: grid;
-    grid-template-columns: 1fr 25vmin 3fr 1fr auto;
+    display: flex;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
     /* column-gap: 20px; */
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     /* height: 40px; */
     padding: 12px 10px;
     color: var(--bg-green);
     user-select: none;
 }
-.header .search-box{
+.main-header .head{
+    /* width: 20%; */
+    text-align: center;
+    place-self: center;   
+}
+.main-header .head  *:not(svg){
+    /* color: var(--bg-green); */
+}
+.main-header .search-box{
     display: flex;
+    /* align-items: center; */
+    /* justify-content: space-between; */
+    border-radius: .2rem;
+    background-color: var(--lightblue);
 }
-.header .search-box .search{
-    width: 80%;
-    padding: 6px 10px;
+.main-header .search-box .search{
+    outline: 0;
+    border: 0;
+    /* width: 80%; */
+    padding: 8px 10px;
+    background-color: transparent;
+    color: white;
+    border-radius: .2rem;
+    box-shadow: inset 0 0 3px 1px rgba(238, 229, 229, 0.7);
 }
-.header .logo a{
+.main-header .search-box button{
+    outline: 0;
+    border: 0;
+    background-color: transparent;
+    /* color: var(--bg-green); */
+    color: white;
+    cursor: pointer;
+}
+.main-header .search-box button svg{
+    color: white;
+}
+.main-header .logo a{
     text-decoration: none;
-    color: var(--bg-green);
+    color: var(--lightblue);
     border-radius: .5rem;
     font-size: 1.5rem;
     /* box-shadow: 0 0 20px 2px red; */
 }
-a{
+.cart-page a{
     cursor: pointer;
+    color: var(--bg-green);
 }
