--- a/main-app/src/components/ui/carousel/carousel.css
+++ b/main-app/src/components/ui/carousel/carousel.css
@@ -9,7 +9,7 @@
 }
 .carousel-container .carousel .inner{
     white-space: nowrap;
-    transition: transform .2s ease;
+    transition: transform .4s ease-in-out;
 }
 .slide{
     height: 60vh;
