--- a/main-app/src/components/headers/nav-header/modal.css
+++ b/main-app/src/components/headers/nav-header/modal.css
@@ -1,33 +1,41 @@
 label {
-  color: white;
+  color: var(--bg-green);
+  font-weight: bold;
 }
 
 :root {
   --modal-width: 80;
 }
 
-.modal {
+.modal-main{
   position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 99999999;
+  top: 0;
+  left: 0;
+}
+.modal {
+  position: absolute;
   top: 5%;
   left: 50%;
   /* transform: translate(-50%,-50%); */
   /* width: 100px; */
-  /* min-width: 400px; */
+    width: 120vmin;
   /* height: 60vmin; */
   margin: auto;
   /* padding: .5rem .3rem; */
   overflow-y: auto;
   animation: slide- .3s ease;
   /* margin: auto; */
-  z-index: 99999999;
   transform: translate(-50%, 0);
   display: flex;
   flex-direction: column;
-  /* align-items: flex-start; */
-  justify-content: space-between;
-  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.642);
+  box-shadow: 0 0 50px 10px rgba(0, 0, 0, 0.938);
   /* justify-content: center; */
-  background-color: rgb(5, 70, 66);
+  /* background-color: rgb(5, 70, 66); */
+  background-color: whitesmoke;
   border-radius: .2rem;
 
 }
@@ -47,7 +55,7 @@ label {
 
 
   /* max-width: calc(var(--modal-width) * 1vmin); */
-  /* width: 100%; */
+  width: 100%;
   /* margin: auto; */
   color: white;
   color: rgb(23, 76, 85);
@@ -66,8 +74,9 @@ label {
   display: flex;
   /* border-radius: .4rem; */
   /* overflow-y: auto; */
+  justify-content: space-around;
   animation: fade .3s ease;
-  place-self: center;
+  /* place-self: center; */
   /* box-shadow: 0 0 20px 5px rgb(53, 41, 41); */
 }
 
@@ -83,27 +92,47 @@ label {
   }
 }
 
-.modal .modal-body .info .content {
-  /* width: 40%; */
+
+.modal .modal-body .content {
+  width: 50%;
   /* box-shadow: inset 0 0 10px 2px white; */
   border-radius: 10px;
   padding: .3rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  /* justify-content: space-around; */
 }
+.modal .modal-body .content  div.toggle-form{
+  border-radius: .2rem;
+  /* width: 59%; */
+}
+.modal .modal-body .content  div.toggle-form .toggle-buttons {
+  /* display: flex; */
+  display: grid;
+  grid-template-columns: auto auto;
+  background-color: var(--lightblue);
+  
+}
+.modal .modal-body .content .toggle-form div.toggle-buttons h4{
 
-.modal .modal-body .info p {
+  margin: .2rem;
+  border-radius: .2rem;
+  padding: .6rem .4rem;
+  cursor: pointer;
+  text-align: center;
+  color: var(--light);
+}
+.modal .modal-body .content p span {
   cursor: pointer;
 }
 
 .modal,
 .modal-body h4 {
-  color: white;
+  color: rgb(57, 44, 44);
 }
 
 .modal form {
-  /* width: 60%; */
+  width: 50%;
   display: flex;
   flex-direction: column;
   /* margin: auto; */
@@ -115,16 +144,35 @@ label {
 }
 
 .form-group {
-  animation: fade .5s ease;
-
+  /* display: grid; */
 }
-form > .form-group > div > button {
+.form-group label {
+  position: relative;
+}
+.form-group label .error {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  padding: 10px;
+}
+.form-group .social-media{
+  /* place-self: center; */
+}
+.form-group .social-media div{
+  display: flex;
+}
+form > .form-group .social-media  div  button {
   padding: 6px;
-  margin:  4px 0;
-  width: 100%;
+  margin: 4px 4px;
+  width: 50%;
   text-transform: capitalize;
   border-radius: .3rem;
-  background-color: rgb(211, 209, 209);
+  background-color: rgb(171, 195, 195);
+  color: rgb(23, 83, 120);
+  /* background-color: black; */
 }
 .close {
   color: rgb(7, 0, 0);
@@ -146,19 +194,22 @@ form .form-group .input-control {
   border-radius: .2rem;
   outline: 0;
   border: 0;
+  box-shadow:inset 0 0 1px 1px rgba(0, 0, 0, 0.669);
   padding: .4rem .6rem;
+  width: 100%;
 }
 
 form .form-group .input-control:focus {
-  box-shadow: inset 0 -1px 2px 1px black;
+  box-shadow: inset 0 -1px 2px 1px var(--bg-green);
 }
 
-.modal form .buttons {
-  width: 100%;
+.modal form .form-group.buttons {
+  /* width: 100%; */
   display: flex;
   padding: .3rem;
-  justify-content: space-around;
-  margin: auto 0;
+  /* display: grid;
+  grid-template-columns: auto auto; */
+  margin-top: auto;
 }
 
 .modal form .buttons .form-btn {
@@ -168,8 +219,11 @@ form .form-group .input-control:focus {
   color: white;
   padding: 1.8vmin 1vmin;
   outline: 0;
+  margin: 0 .2rem;
+  /* place-self: center; */
   border: 0;
-  width: 49%;
+
+  width: 50%;
   cursor: pointer;
 }
 
@@ -177,10 +231,10 @@ form .form-group .input-control:focus {
   background-color: rgb(233, 40, 6);
 }
 
-form>.form-group {
+/* form>.form-group {
   display: flex;
   flex-direction: column;
-}
+} */
 
 .fade-out {
   animation: fade-out .6s linear;
@@ -208,7 +262,8 @@ form>.form-group {
 
 .modal.error .modal-header,
 .modal.error .modal-body {
-  width: calc(var(--modal-width) * 1vmin);
+  /* width: calc(var(--modal-width) * 1vmin); */
+  width: 100%;
 }
 
 .modal.error h4 {
