--- a/main-app/src/components/headers/style.css
+++ b/main-app/src/components/headers/style.css
@@ -25,34 +25,35 @@
     /* align-items: center; */
     /* justify-content: space-between; */
     border-radius: .2rem;
-    background-color: var(--lightblue);
+    /* background-color: var(--lightblue); */
 }
 .main-header .search-box .search{
     outline: 0;
     border: 0;
     /* width: 80%; */
     padding: 8px 10px;
-    background-color: transparent;
-    color: white;
+    /* background-color: transparent; */
+    /* color: white; */
     border-radius: .2rem;
     box-shadow: inset 0 0 3px 1px rgba(238, 229, 229, 0.7);
 }
 .main-header .search-box button{
     outline: 0;
     border: 0;
-    background-color: transparent;
+    /* background-color: transparent; */
     /* color: var(--bg-green); */
     color: white;
     cursor: pointer;
 }
 .main-header .search-box button svg{
-    color: white;
+    /* color: white; */
 }
 .main-header .logo a{
     text-decoration: none;
     color: var(--lightblue);
     border-radius: .5rem;
     font-size: 1.5rem;
+  
     /* box-shadow: 0 0 20px 2px red; */
 }
 .cart-page a{
