--- a/main-app/src/containers/CartPage/CartItem/style.css
+++ b/main-app/src/containers/CartPage/CartItem/style.css
@@ -1,6 +1,7 @@
 .cart {
-width: 90vmin;
-margin: .6rem;
+/* width: 120vmin; */
+width: 100%;
+margin: .6rem 0;
 background-color: var(--bg-green);
 padding: 10px;
 color: white;
