--- a/admin-app/src/containers/form.css
+++ b/admin-app/src/containers/form.css
@@ -1,6 +1,7 @@
 .form-container{
     text-align: center;
-    min-width: 600px;
+    min-width: 110vmin;
+    /* height: 90vmin; */
     margin: auto auto;
     background-color:var(--form-bg);
     padding: 1rem 1rem;
@@ -9,9 +10,11 @@
     /* flex-direction: row; */
     align-items: center;
     border-radius: 4px;
-    position: absolute;
+    position: fixed;
+    overflow-y: auto;
     left: 50%;
     top: 50%;
+    z-index: 9999;
     transform: translate(-50%,-50%);
     animation: slide-form .3s linear;
 
@@ -32,8 +35,8 @@
   }
   .form-container .header .img-form{
     padding: .5rem;
-    width: 200px;
-    height: 200px;
+    width: 50vmin;
+    height: 40vmin;
     background-color: #282c34;
     border: 5px solid gray;
   }
@@ -46,7 +49,7 @@
     text-transform: capitalize;
   }
   .form-container .form{
-    padding:  .5rem .5rem;
+    /* padding:  .5rem .5rem; */
   }
   
  .form-container .form .form-group ,.btn-content{
@@ -54,7 +57,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: .3rem .3rem;
+    /* margin: .3rem .3rem; */
   }
   .form-group label{
     text-transform: capitalize;
@@ -63,7 +66,7 @@
   }
   .form-group  .checkbox-container{
     position: relative;
-    font-size: 20px;
+    font-size: 15px;
     user-select: none;
     display: block;
     cursor: pointer;
@@ -84,8 +87,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     background-color: rgb(248, 252, 255);
     border-radius: .2rem;
     transition:  .3s ease;
@@ -119,7 +122,7 @@
     border-width: 0 3px 3px 0;
   }
   .form-container  .form .form-input{
-    padding: .5rem .5rem;
+    padding: .1rem .3rem;
     outline: 0;
     border: 0;
     border-radius: 4px;
@@ -127,10 +130,10 @@
   .form-input:focus{
     box-shadow:inset 0 -3px 0px 0 gray;
   }
-  .btn-content .form-btn{
+  .btn-content  .form-btn{
     background-color: #063358;
     text-transform: capitalize;
-    padding: .5rem 1rem;
+    padding: .5rem .6rem;
     float: right;
     clear: both;
     border-radius: 4px;
@@ -140,8 +143,8 @@
     transition: .1s ease;
   }
   .form-btn:hover{
-    background-color: rgb(25, 93, 119);
-    box-shadow: 0px 10px 100px 1px rgb(138, 123, 123);
+    background-color: rgb(4, 58, 80);
+    box-shadow: 0px 2px 100px 1px rgb(250, 250, 250);
   }
   .form-btn:active{
     transform: translateY(2px);
