--- a/admin-app/src/containers/product.css
+++ b/admin-app/src/containers/product.css
@@ -56,9 +56,7 @@ display: flex;
     height: 100%;
     object-fit: contain;
 }
-.page-container form .form-btn{
-    border: 0;
-}
+
 .page-container .main-form-container  .product-content{
     position: fixed;
     top: 0;
@@ -132,13 +130,13 @@ table tbody tr td button{
     z-index: 2;
 }
  button{
-    padding: 3px 8px;
+    padding: 3px 6px;
     background: var(--dark);
     color: white;
     border-radius: .2rem;
     outline: 0;
     border: 0;
-    box-shadow: inset 0 0 10px 1px rgba(116, 114, 114, 0.6);
+    /* box-shadow: inset 0 0 10px 1px rgba(116, 114, 114, 0.6); */
 }
 button:hover{
     transform:translateY(-2px) scale(.9);
