--- a/main-app/src/containers/ProductDetails/style.css
+++ b/main-app/src/containers/ProductDetails/style.css
@@ -1,26 +1,38 @@
 .product-details-container{
     display: flex;
-    padding-top: 2.4vmin;
-}
-.product-details-container .product-img-preview{
-    display: grid;
-    /* box-shadow: 0 0 3px 0 black; */
+    /* padding: 1.4vmin; */
+    
     
 }
-.product-details-container .product-img-preview .images{
+.product-details-container .product-img-preview{
     display: flex;
+    flex-direction: column;
+    box-shadow:inset 0 0 3px 0 black; 
+    width: 40%;    
+    padding: .3rem;
+    margin: .3rem;
+    border-radius: .3rem;
+    height: 450px;
+}
+.product-details-container .product-img-preview .images{
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: space-around;
+    height: 90%;
 }
 
 .product-details-container .product-img-preview .images .vertical-img-stack{
-    width: 13vmin;
+    width: 80px;
     background-color: rgb(213, 217, 208);
     overflow-y: auto;
+    height: 100%;
 }
 .product-details-container .product-img-preview .images .vertical-img-stack .thumbnail{
-    width: 12vmin;
-    height: 12vmin;
-    margin: .3rem auto;
+    width: 60px;
+    height: 80px;
+    margin: .6rem auto;
     box-shadow: 0 0 3px 0 black;
+    cursor: pointer;
 }
 .product-details-container .product-img-preview .images .vertical-img-stack .thumbnail img{
     width: 100%;
@@ -29,24 +41,25 @@
 }
 .product-details-container .product-img-preview .images .picture-preview{
     
+    width: 80%;
+    height: 100%;
 }
 .product-details-container .product-img-preview .images .picture-preview .preview{
-    min-width: 30vmin;
-    min-height: 30vmin;
+    /* min-width: 30vmin;
+    min-height: 30vmin; */
     /* max-height: 30vmin;
     max-width: 30vmin;
      */
-    height: 70vmin;
-    width: 90vmin;
+    height: 100%;
 }
 .product-details-container .product-img-preview .images .picture-preview .preview img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 .product-details-container .product-img-preview .buttons{
     place-self: center;
-    margin-top: 10px ;
+    margin-top: auto ;
 }
 .product-details-container .product-img-preview .buttons .btn{
     place-self: center;
@@ -64,6 +77,7 @@
 }
 .product-details-container .product-description {
     padding: 10px;
+    width: 60%;
 }
 .product-details-container .product-description .breed ul {
     list-style-type: none;
