--- a/main-app/src/components/headers/style.css
+++ b/main-app/src/components/headers/style.css
@@ -11,6 +11,7 @@
     padding: 12px 10px;
     color: var(--bg-green);
     user-select: none;
+    background-color: rgba(235, 231, 228, 0.829);
 }
 .main-header .head{
     /* width: 20%; */
@@ -25,24 +26,28 @@
     /* align-items: center; */
     /* justify-content: space-between; */
     border-radius: .2rem;
-    /* background-color: var(--lightblue); */
+    background-color: var(--light);
+    box-shadow:  0 0 13px 0px rgba(243, 237, 237, 0.877);
 }
 .main-header .search-box .search{
     outline: 0;
     border: 0;
     /* width: 80%; */
     padding: 8px 10px;
-    /* background-color: transparent; */
+    background-color: transparent;
     /* color: white; */
     border-radius: .2rem;
-    box-shadow: inset 0 0 3px 1px rgba(238, 229, 229, 0.7);
+    box-shadow:  0 0 3px 0px rgba(5, 4, 4, 0.7);
 }
 .main-header .search-box button{
+
+    box-shadow:  0 0 3px 0px rgba(5, 4, 4, 0.7);
+    padding: 6px 6px;
     outline: 0;
     border: 0;
-    /* background-color: transparent; */
+    background-color: transparent;
     /* color: var(--bg-green); */
-    color: white;
+    /* color: rgb(245, 239, 239); */
     cursor: pointer;
 }
 .main-header .search-box button svg{
@@ -50,7 +55,7 @@
 }
 .main-header .logo a{
     text-decoration: none;
-    color: var(--lightblue);
+    color: var(--bg-green);
     border-radius: .5rem;
     font-size: 1.5rem;
   
