add order pages

--- a/main-app/src/containers/checkoutPage/style.css
+++ b/main-app/src/containers/checkoutPage/style.css
@@ -29,7 +29,7 @@
     text-transform: capitalize;
 }
 .checkout-container .checkout .checkout-body{
-    padding: 5px;
+    padding: 10px;
     box-shadow: inset 0 0 10px 0px rgba(0,0,0,0.7);
     width: 100%;
 }
@@ -76,6 +76,8 @@ form{
 .address{
    
     padding: 3px;
+    /* border-radius: .3rem; */
+    /* box-shadow: 0 0 3px 0 black; */
 }
 
 .address-container .address-body .address label{
@@ -103,4 +105,57 @@ form{
 }
 .address .buttons .button:last-child{
     background-color: var(--success);
+}
+.confirm:not(.confirm .confirm-mail){
+    text-transform: capitalize;
+}
+.confirm .confirm-mail{
+    text-transform: lowercase;
+    color: var(--lightblue);
+    text-decoration: underline;
+}
+.confirm-btn{
+    background-color: var(--bg-green);
+    color: var(--light);
+    padding: 6px 8px;
+    margin: .3rem 0;
+    text-transform: capitalize;
+    float: right;
+    transition: all ,2s ease;
+}
+.confirm-btn:active .confirm-btn::before{
+    content: ">";
+}
+.payment-option{
+    text-align: center;
+    padding: .3rem;
+    border-radius: .3rem;
+}
+.payment-option::before,
+.payment-option::after{
+    content: "";
+    display: table;
+    clear: both;
+}
+.options {
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+}
+.option{
+    width: 200px;
+    height: 60px;
+    /* text-align: center; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding: 10px 10px;
+    margin: .3rem 0;
+}
+.option:hover{
+    box-shadow: 0 0 3px 0 rgba(0,0,0,0.7);
+}
+.checkout .active{
+    box-shadow: 0px 0px 100px 0px black;
 }
