--- a/main-app/src/components/headers/nav-header/dropdown.css
+++ b/main-app/src/components/headers/nav-header/dropdown.css
@@ -35,6 +35,7 @@
     align-items: center;
     justify-content: center;
     z-index: 99999;
+    /* padding: .3rem; */
     /* border-bottom: 10px solid rgb(252, 250, 245); */
     /* border-radius: 30px; */
     /* box-shadow: inset 0 0 30px 10px rgb(55, 37, 4); */
@@ -44,7 +45,7 @@
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     min-width: 200px;
-    /* padding: .6rem; */
+    padding: .6rem;
     /* place-items: center; */
     background-color: var(--light);
     box-shadow: 0 15px 30px 10px black;
