--- a/main-app/src/components/headers/style.css
+++ b/main-app/src/components/headers/style.css
@@ -25,7 +25,8 @@
     display: flex;
     /* align-items: center; */
     /* justify-content: space-between; */
-    border-radius: .2rem;
+    border-radius: 30px;
+    overflow: hidden;
     background-color: var(--light);
     box-shadow:  0 0 13px 0px rgba(243, 237, 237, 0.877);
 }
