--- a/main-app/src/components/ui/card/style.css
+++ b/main-app/src/components/ui/card/style.css
@@ -1,7 +1,9 @@
 .card{
     width: calc(100% - 20px);
     margin: 0 10px;
-    border: 2px solid gray;
+    /* border: 2px solid gray; */
+    border-radius: .3rem;
+    /* overflow: hidden; */
     
 }
 .card .card-header{
@@ -13,14 +15,15 @@
 .card .card-body{
     /* padding: .6rem; */
     /* display: block; */
-    overflow: hidden;
+    /* overflow: hidden; */
     /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; */
     /* grid-template-rows: 1fr 1fr; */
     /* column-gap: 10p  x; */
     /* row-gap: 20px; */
     /* overflow-x: auto; */
-    white-space: nowrap;
-    padding: .3rem;
+    /* white-space: nowrap; */
+    padding: .3rem .6em;
+    box-shadow: inset 0 0 5px 0 black;
 
 }
 .card-body .product{
