--- a/admin-app/src/index.css
+++ b/admin-app/src/index.css
@@ -10,7 +10,7 @@
   --bg: rgb(129, 156, 156);
   --form-bg:#0f5a5a;
   --body-bg: rgb(18, 72, 119);
-  --danger: red;
+  --danger: rgb(170, 2, 2);
   --warning: orange;
   --light: white;
   --dark: #555555;
