--- a/main-app/src/components/headers/style.css
+++ b/main-app/src/components/headers/style.css
@@ -2,8 +2,8 @@
     text-transform: capitalize;
     width: 100%;
     background-color: var(--light);
-    display: flex;
-    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
+    display: grid;
+    grid-template-columns: 1fr 20% 30% 30% 1fr;
     /* column-gap: 20px; */
     align-items: center;
     justify-content: space-between;
@@ -16,7 +16,8 @@
 .main-header .head{
     /* width: 20%; */
     text-align: center;
-    place-self: center;   
+    place-self: center;
+    font-size: 3.1vmin;
 }
 .main-header .head.location{
     display: flex;
@@ -27,47 +28,60 @@
     /* color: var(--bg-green); */
 }
 .main-header .search-box{
+    width: 200px;
+    height: 25px;
     display: flex;
-    /* align-items: center; */
-    /* justify-content: space-between; */
+    align-items: center;
+    justify-content: flex-start;
     border-radius: 30px;
-    overflow: hidden;
-    background-color: var(--light);
-    box-shadow:  0 0 13px 0px rgba(243, 237, 237, 0.877);
+    /* overflow: hidden; */
+    /* box-shadow:  0 0 13px 0px rgba(0, 0, 0, 0.877); */
+    width: 20vmin;
+    height: 5vmin;
 }
 .main-header .search-box .search{
     outline: 0;
+    background-color: var(--light);
     border: 0;
-    /* width: 80%; */
-    padding: 8px 10px;
-    background-color: transparent;
+    padding: 1.2vmin .5rem;
+    /* background-color: transparent; */
     /* color: white; */
     border-radius: .2rem;
-    box-shadow:  0 0 3px 0px rgba(5, 4, 4, 0.7);
+    /* box-shadow:  0 0 3px 0px rgba(5, 4, 4, 0.7); */
+    width: 25vmin;
 }
 .main-header .search-box button{
 
     box-shadow:  0 0 3px 0px rgba(5, 4, 4, 0.7);
-    padding: 6px 6px;
+    /* padding: 6px 6px; */
     outline: 0;
     border: 0;
-    background-color: transparent;
+    display: none;
+    /* background-color: transparent; */
     /* color: var(--bg-green); */
     /* color: rgb(245, 239, 239); */
+    width:5vmin;
+    height: 5vmin;
+
     cursor: pointer;
 }
 .main-header .search-box button svg{
     /* color: white; */
+    line-height: 5vmin;
+    font-size: 2.5vmin;
 }
 .main-header .logo a{
     text-decoration: none;
     color: var(--bg-green);
     border-radius: .5rem;
-    font-size: 1.5rem;
+    font-size: 4.5vmin;
   
     /* box-shadow: 0 0 20px 2px red; */
 }
 .cart-page a{
     cursor: pointer;
     color: var(--bg-green);
+}
+ a{
+    text-decoration: none;
 }
