--- a/admin-app/src/containers/product.css
+++ b/admin-app/src/containers/product.css
@@ -1,8 +1,12 @@
-h1,h2,h3,h4,h5{
+h2,h3
+{
+    font-size: 5.5vmin;
     text-transform: capitalize;
 }
+h1,h2{
+    font-size: 5.5vmin;
+}
 .fade-in{
-
     animation: fade-in .2s linear;
 }
 .page-container{
@@ -47,7 +51,7 @@ display: flex;
     /* overflow: hidden; */
 }
 .page-container .main-form-container .picture-container .category-preview-img{
-        width: 35vmin;
+    width: 35vmin;
     height: 25vmin;
 
 }
@@ -97,7 +101,7 @@ display: flex;
     object-fit: contain;
 }
 table{
-    width: 100%;
+width: 100%;
 border-collapse: collapse;
 text-align: center;
 overflow: auto;
@@ -106,32 +110,40 @@ margin-top: 20px;
 }
 table thead tr th{
     padding: .5rem .5rem;
-    border: 1px solid gray;
+    border: 1px solid var(--form-bg);
+    text-transform: capitalize;
+    font-size: 2.9vmin;
 }
 table tbody tr{
     padding: .3rem .3rem;
     border: 1px solid gray;
     cursor: pointer;
     transition: all .2s ease;
+    background-color: var(--form-bg);
 }
 table tbody tr:nth-child(odd){
-    background-color: rgb(51, 51, 122);
+    background-color: var(--main-bg);
     color: white;
 }
 table tbody tr:hover{
-    background-color: rgb(128, 173, 209);
+    background-color: rgb(4, 46, 80);
+    color: white    ;
 }
 table tbody tr td{
     border: 1px solid gray;
     padding: .2rem 0;
+    font-size: 2.3vmin;
+    color: white;
     z-index: 1;
 }
 table tbody tr td button{
     z-index: 2;
+
 }
  button{
-    padding: 3px 6px;
-    background: var(--dark);
+    padding: .6vmin;
+    text-transform: capitalize;
+    background: var(--body-bg);
     color: white;
     border-radius: .2rem;
     outline: 0;
@@ -140,10 +152,8 @@ table tbody tr td button{
 }
 button:hover{
     transform:translateY(-2px) scale(.9);
-    
 }
 button:active{
-
     transform:translateY(2px) scale(.8);
 }
 table tbody tr td:last-child button{
