--- a/main-app/src/App.css
+++ b/main-app/src/App.css
@@ -35,40 +35,49 @@ button{
 
 
 .select-option{
-  padding: 8px 10px ;
-  outline: 1px solid black;
+  padding: 1.5vmin 1.6vmin ;
+  /* outline: 1px solid black; */
   border: 0;
   /* background: rgb(211, 207, 207); */
   background: var(--bg-green);
   color: white;
   text-transform: capitalize;
-  border-radius: .4rem;
+  border-radius: .4rem; font-size: 2.3vmin;
   cursor: pointer;
+  width: 15.8vmin;
 }
 .select-option option{
-  padding: 16px 8px;
+  padding: 1vmin;
   /* background: var(--bg-green); */
-  color: white;
+  color: white; font-size: 2.5vmin;
 }
 ::-webkit-scrollbar{
-  width: 10px;
+  width: 4px;
 
   background-color: rgb(3, 66, 80); 
   /* background-color: rgb(16, 4, 4); */
   /* padding: 10px; */
   /* border-radius: 30px; */
 }
+::-webkit-scrollbar:hover{
+  /* width: 15px; */
+}
 ::-webkit-scrollbar-track{
- /* width: 10px; */
+  /* width: 10px; */
   /* ba ckground-color: rgb(3, 66, 80);  */
- /* border-radius: 10px; */
+  /* border-radius: 10px; */
 }
 ::-webkit-scrollbar-thumb{
-  width: 5px;
-  background-color: rgba(138, 152, 176, 0.807);
+  /* margin: .3rem; */
+  width: 1px;
+  background-color: rgba(252, 255, 253, 0.807);
   border-radius: 30px;
 }
+::-webkit-scrollbar-thumb:hover{
+  
+}
 ::-webkit-scrollbar-track-piece{
+  cursor: pointer;
 
 }
 /* ::-webkit-scrollbar-button{
