--- a/main-app/src/components/ui/card/style.css
+++ b/main-app/src/components/ui/card/style.css
@@ -10,7 +10,11 @@
     display: grid;
     grid-template-columns: 1fr auto;
     padding: .3rem ;
-    box-shadow: 0 0 20px 1px rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px 0px rgba(0,0,0,0.5);
+    font-size: 3.5vmin;
+    overflow: hidden;
+    border-top-left-radius: .4rem;
+    border-top-right-radius: .4rem;
 }
 .card .card-body{
     /* padding: .6rem; */
@@ -22,8 +26,10 @@
     /* row-gap: 20px; */
     /* overflow-x: auto; */
     /* white-space: nowrap; */
-    padding: .3rem .6em;
-    box-shadow: inset 0 0 5px 0 black;
+    padding: .3rem .6rem;
+    box-shadow:  0 5px 10px 0 rgba(12, 10, 10, 0.329);
+    /* font-size: 3vmin; */
+    border-top: 2px solid var(--bg-green);
 
 }
 .card-body .product{
@@ -37,6 +43,7 @@
     height: 40vmin;
     background: var(--light);
     margin: 0 .3rem;
+
 }
 .card-body .product-img{
     width: 100%;
