--- a/main-app/src/containers/CartPage/cart.css
+++ b/main-app/src/containers/CartPage/cart.css
@@ -5,7 +5,7 @@
 }
 .cart-page-container .cart-item{
     width: 50%;
-    padding: 10px;
+    padding: .9vmin;
     margin: .2rem ;
     display: flex;
     flex-direction: column;
@@ -17,7 +17,7 @@
     border-radius: .3rem;
     background-color: var(--light);
     justify-content: space-between;
-    box-shadow: 0 0 5px 2px rgba(0,0,0,0.7);
+    box-shadow: 0 0 5px 2px rgba(0,0,0,0.7); font-size: 3.3vmin;
 }
 .cart-footer{
     margin-top:  auto;
@@ -52,6 +52,7 @@
     background-color: var(--light);
     justify-content: space-between;
     box-shadow: 0 0 5px 2px rgba(0,0,0,0.7); */
+    font-size: 3.3vmin;
 }
 .cart-item.right .cart-quantity h4{
     background-color: var(--bg-green);
@@ -69,20 +70,21 @@
     overflow: hidden;
     box-shadow: 0 0 5px 2px rgba(0,0,0,0.7);
     background-color: var(--light);
+    font-size: 2.7vmin;
 }
 
 .cart-item.right .cart-price .items h3{
     background-color: var(--bg-green);
     padding-left: 10px;
     text-transform: capitalize;
-    color: var(--light);
+    color: var(--light); font-size: 2.3vmin;
 }
 .cart-item.right .cart-price .items h4{
     position: relative;
     padding: 2px 30px;
     display: flex;
     align-items: center;
-    text-transform: capitalize;
+    text-transform: capitalize; font-size: 2.5vmin;
     text-decoration:underline;
 }
 .cart-item.right .cart-price .items h4::before{
