--- a/main-app/src/index.css
+++ b/main-app/src/index.css
@@ -29,7 +29,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--bg-body);
+  /* background-color: var(--bg-body); */
 }
 
 code {
